--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,7 +35,9 @@ jobs:
         run: go mod download
 
       - name: Run Lint
-        run: golangci-lint run
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.64
 
   test:
     runs-on: ubuntu-latest
