--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -39,6 +39,8 @@ jobs:
         with:
           version: v1.64
           verify: false
+          args: --timeout=5m --verbose --debug
+          working-directory: .
 
   test:
     runs-on: ubuntu-latest
