--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,7 +38,7 @@ jobs:
         uses: golangci/golangci-lint-action@v6
         with:
           version: v1.64
-          verify: false
+          github-token: ${{ secrets.ACTION_TOKEN }}
           working-directory: .
 
   test:
